--- a/packages/nextjs/.env.example
+++ b/packages/nextjs/.env.example
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_PROVIDER_URL=NEXT_PUBLIC_PROVIDER_URL=https://starknet-sepolia.infura.io/v3/c45bd0ce3e584ba4a5e6a5928c9c0b0f # sepolia or mainnet 
+NEXT_PUBLIC_PROVIDER_URL=NEXT_PUBLIC_PROVIDER_URL=https://starknet-sepolia.infura.io/v3/c45bd0ce3e584ba4a5e6a5928c9c0b0f
