Update token vendor challenge (#97)

--- a/packages/snfoundry/package.json
+++ b/packages/snfoundry/package.json
@@ -2,9 +2,10 @@
   "name": "@ss-2/snfoundry",
   "version": "0.0.1",
   "scripts": {
-    "chain": "cd local-devnet && cargo run -- --seed 0 --account-class cairo1",
+    "chain": "starknet-devnet --seed 0 --account-class cairo1",
     "deploy": "ts-node scripts-ts/helpers/deploy-wrapper.ts",
     "test": "cd contracts && snforge test",
+    "test-eslint": "node eslint-contract-name/eslint-plugin-contract-names.test.js",
     "compile": "cd contracts && scarb build",
     "format": "prettier --write 'scripts-ts/**/*.{ts,tsx}' && cd contracts && scarb fmt",
     "format:check": "prettier --check 'scripts-ts/**/*.{ts,tsx}' && cd contracts && scarb fmt --check",
@@ -14,17 +15,18 @@
     "@types/node": "^20",
     "@types/prettier": "^2",
     "@types/yargs": "^17.0.32",
+    "globals": "^15.8.0",
     "shx": "^0.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5",
+    "typescript-eslint": "^7.16.1",
     "yargs": "^17.7.2"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
     "envfile": "^6.18.0",
     "prettier": "^2.8.8",
-    "starknet": "5.25.0",
-    "starknet-dev": "npm:starknet@6.7.0",
+    "starknet": "6.7.0",
     "toml": "^3.0.0",
     "tslib": "^2.6.2"
   }
