--- a/packages/snfoundry/tsconfig.json
+++ b/packages/snfoundry/tsconfig.json
@@ -10,5 +10,5 @@
       "*": ["node_modules/*", "src/types/*"]
     }
   },
-  "include": ["scripts-ts/**/*"]
+  "include": ["scripts-ts/**/*.ts"],
 }
