Update Challenge-simple-nft-example last Version Scaffold Stark (#101)
Co-authored-by: Carlos Ramos <88168831+jrcarlos2000@users.noreply.github.com>
Co-authored-by: Gabriela del Pilar Rojas <77763655+GabrielaDelPilarR@users.noreply.github.com>
Co-authored-by: 0xquantum3labs <contact@quantum3labs.com>
Co-authored-by: jrcarlos2000 <jrcarlos2000.dev@gmail.com>
Co-authored-by: Daniel Calderón Díaz <66186331+danielcdz@users.noreply.github.com>
Co-authored-by: gianmalarcon <gian@quantum3labs.com>
Co-authored-by: Ugonna Paul Dike <ugonnadike001@gmail.com>
Co-authored-by: Eduardo <43045722+edulanasca@users.noreply.github.com>
Co-authored-by: Eduardo <edujlac@gmail.com>
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: oceanlvr <657531018@qq.com>
Co-authored-by: Quantum3Labs <157618676+0xquantum3labs@users.noreply.github.com>
Co-authored-by: gianalarcon <gian.alarcon@unmsm.edu.pe>
Co-authored-by: Gabriela del Pilar Rojas <gabrieladelpilarrojas21@gmail.com>
Co-authored-by: Richard <53423618+metalboyrick@users.noreply.github.com>
Co-authored-by: CarlosR <carlos.ramos@grupoimportia.com>
Co-authored-by: Abdulhakeem Abdulazeez Ayodeji <44169294+Ayoazeez26@users.noreply.github.com>
Co-authored-by: Ikem <91676649+ikemHood@users.noreply.github.com>
Co-authored-by: Wolf <81079370+raizo07@users.noreply.github.com>
Co-authored-by: Joseph Chimebuka <chimebujoseph@gmail.com>
Co-authored-by: Jemiiah <160767568+Jemiiah@users.noreply.github.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,12 +3,14 @@ name: Next.js CI
 on:
   push:
     paths:
+      - "packages/snfoundry/contracts/**"
       - "packages/nextjs/**"
   pull_request:
     branches:
       - main
     paths:
       - "packages/nextjs/**"
+      - "packages/snfoundry/contracts/**"
 
 jobs:
   ci:
@@ -23,6 +25,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
 
+      - name: Install scarb
+        run: curl --proto '=https' --tlsv1.2 -sSf https://docs.swmansion.com/scarb/install.sh | sh -s -- -v 2.6.5
+
+      - name: Install snfoundryup
+        run: curl -L https://raw.githubusercontent.com/foundry-rs/starknet-foundry/master/scripts/install.sh | sh
+
+      - name: Install snforge
+        run: snfoundryup -v 0.27.0
+
+      - name: Run snforge tests
+        run: snforge test
+        working-directory: ./packages/snfoundry/contracts
+
       - name: Setup node env
         uses: actions/setup-node@v3
         with:
@@ -34,11 +49,8 @@ jobs:
         run: yarn install --immutable
         working-directory: ./packages/nextjs
 
-      - name: Install scarb
-        run: curl --proto '=https' --tlsv1.2 -sSf https://docs.swmansion.com/scarb/install.sh | sh -s -- -v 2.5.4
-
       - name: Check Code Format
-        run: npm run format:check
+        run: yarn format:check
 
       - name: Run Next.js lint
         run: yarn next:lint --max-warnings=0
