Update Challenge-token-vendor last Version Scaffold Stark (#102)
Co-authored-by: Carlos Ramos <88168831+jrcarlos2000@users.noreply.github.com>
Co-authored-by: Gabriela del Pilar Rojas <77763655+GabrielaDelPilarR@users.noreply.github.com>
Co-authored-by: 0xquantum3labs <contact@quantum3labs.com>
Co-authored-by: jrcarlos2000 <jrcarlos2000.dev@gmail.com>
Co-authored-by: Daniel Calderón Díaz <66186331+danielcdz@users.noreply.github.com>
Co-authored-by: gianmalarcon <gian@quantum3labs.com>
Co-authored-by: Ugonna Paul Dike <ugonnadike001@gmail.com>
Co-authored-by: Eduardo <43045722+edulanasca@users.noreply.github.com>
Co-authored-by: Eduardo <edujlac@gmail.com>
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: oceanlvr <657531018@qq.com>
Co-authored-by: Quantum3Labs <157618676+0xquantum3labs@users.noreply.github.com>
Co-authored-by: gianalarcon <gian.alarcon@unmsm.edu.pe>
Co-authored-by: Gabriela del Pilar Rojas <gabrieladelpilarrojas21@gmail.com>
Co-authored-by: Richard <53423618+metalboyrick@users.noreply.github.com>
Co-authored-by: CarlosR <carlos.ramos@grupoimportia.com>
Co-authored-by: Abdulhakeem Abdulazeez Ayodeji <44169294+Ayoazeez26@users.noreply.github.com>
Co-authored-by: Ikem <91676649+ikemHood@users.noreply.github.com>
Co-authored-by: Wolf <81079370+raizo07@users.noreply.github.com>
Co-authored-by: Joseph Chimebuka <chimebujoseph@gmail.com>
Co-authored-by: Jemiiah <160767568+Jemiiah@users.noreply.github.com>

--- a/packages/snfoundry/package.json
+++ b/packages/snfoundry/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "chain": "starknet-devnet --seed 0 --account-class cairo1",
     "deploy": "ts-node scripts-ts/helpers/deploy-wrapper.ts",
+    "deploy:reset": "ts-node scripts-ts/helpers/deploy-wrapper.ts --reset",
     "test": "cd contracts && snforge test",
     "test-eslint": "node eslint-contract-name/eslint-plugin-contract-names.test.js",
     "compile": "cd contracts && scarb build",
