--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ss-2",
-  "version": "0.2.3",
+  "version": "0.2.6",
   "author": "Q3 Labs",
   "license": "MIT",
   "private": true,
@@ -13,6 +13,7 @@
   "scripts": {
     "chain": "yarn workspace @ss-2/snfoundry chain",
     "deploy": "yarn workspace @ss-2/snfoundry deploy",
+    "deploy:reset": "yarn workspace @ss-2/snfoundry  deploy:reset",
     "test": "yarn workspace @ss-2/snfoundry test",
     "compile": "yarn workspace @ss-2/snfoundry compile",
     "start": "yarn workspace @ss-2/nextjs dev",
