--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -25,6 +25,7 @@
     "daisyui": "^4.7.3",
     "ethers": "^6.12.0",
     "get-starknet-core": "^3.3.0",
+    "humanize-duration": "^3.32.0",
     "next": "14.1.3",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
@@ -39,6 +40,7 @@
     "zustand": "^4.1.2"
   },
   "devDependencies": {
+    "@types/humanize-duration": "^3.27.4",
     "@types/node": "^20",
     "@types/nprogress": "^0",
     "@types/react": "^18",
