--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,13 +26,13 @@ jobs:
         uses: actions/checkout@master
 
       - name: Install scarb
-        run: curl --proto '=https' --tlsv1.2 -sSf https://docs.swmansion.com/scarb/install.sh | sh -s -- -v 2.6.5
+        run: curl --proto '=https' --tlsv1.2 -sSf https://docs.swmansion.com/scarb/install.sh | sh -s -- -v 2.8.2
 
       - name: Install snfoundryup
         run: curl -L https://raw.githubusercontent.com/foundry-rs/starknet-foundry/master/scripts/install.sh | sh
 
       - name: Install snforge
-        run: snfoundryup -v 0.27.0
+        run: snfoundryup -v 0.30.0
 
       - name: Run snforge tests
         run: snforge test
@@ -58,6 +58,10 @@ jobs:
 
       - name: Check typings on Next.js
         run: yarn next:check-types
+        working-directory: ./packages/nextjs
+
+      - name: Run Next.js tests
+        run: yarn test run
         working-directory: ./packages/nextjs
 
       - name: Build Next.js project
