--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -11,20 +11,23 @@
     "vercel": "vercel",
     "vercel:yolo": "vercel --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "test": "vitest"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@next/font": "^14.2.1",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/themes": "2.0.3",
-    "@starknet-react/chains": "^0.1.7",
-    "@starknet-react/core": "^2.8.2",
+    "@starknet-io/types-js": "^0.7.7",
+    "@starknet-react/chains": "^3.0.0",
+    "@starknet-react/core": "^3.0.0",
+    "@starknet-react/typescript-config": "0.0.0",
     "abi-wan-kanabi": "^2.2.2",
     "blo": "^1.1.1",
     "daisyui": "^4.7.3",
     "ethers": "^6.12.0",
-    "get-starknet-core": "^3.3.0",
+    "get-starknet-core": "^4.0.0",
     "next": "14.1.3",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
@@ -33,23 +36,30 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "starknet": "6.7.0",
+    "starknet": "6.12.1",
     "type-fest": "^4.6.0",
     "usehooks-ts": "^2.13.0",
     "zustand": "^4.1.2"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.0.1",
     "@types/node": "^20",
     "@types/nprogress": "^0",
     "@types/react": "^18",
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/coverage-istanbul": "^2.1.1",
+    "@vitest/coverage-v8": "^2.1.1",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
+    "jsdom": "^25.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
-    "vercel": "^33.7.1"
+    "vercel": "^33.7.1",
+    "vitest": "^2.1.1"
   }
 }
