--- a/packages/snfoundry/contracts/Scarb.toml
+++ b/packages/snfoundry/contracts/Scarb.toml
@@ -13,11 +13,15 @@ openzeppelin_token = "0.17.0"
 
 [dev-dependencies]
 openzeppelin_utils = "0.17.0"
-snforge_std = "0.30.0"
-
+snforge_std = "0.31.0"
 
 [[target.starknet-contract]]
 casm = true
 
 [tool.fmt]
 sort-module-level-items = true
+
+[[tool.snforge.fork]]
+name = "SEPOLIA_LATEST"
+url = "https://starknet-sepolia.public.blastapi.io/rpc/v0_7"
+block_id.tag = "latest"
