--- a/packages/nextjs/public/manifest.json
+++ b/packages/nextjs/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Scaffold Stark",
+  "name": "Token Vendor",
   "description": "Fast track your starknet journey",
   "iconPath": "logo.ico"
 }
