--- a/packages/snfoundry/contracts/Scarb.toml
+++ b/packages/snfoundry/contracts/Scarb.toml
@@ -7,7 +7,9 @@ edition = "2023_11"
 
 [dependencies]
 starknet = "2.8.2"
-openzeppelin = "0.17.0"
+openzeppelin_access = "0.17.0"
+openzeppelin_token = "0.17.0"
+openzeppelin_introspection = "0.17.0"
 
 [dev-dependencies]
 openzeppelin_utils = "0.17.0"
