--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@next/font": "^14.2.1",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/themes": "2.0.3",
     "@starknet-io/types-js": "^0.7.7",
