--- a/packages/snfoundry/contracts/Scarb.toml
+++ b/packages/snfoundry/contracts/Scarb.toml
@@ -13,7 +13,8 @@ openzeppelin_introspection = "0.17.0"
 
 [dev-dependencies]
 openzeppelin_utils = "0.17.0"
-snforge_std = "0.30.0"
+snforge_std = "0.31.0"
+assert_macros = "2.8.2"
 
 
 [[target.starknet-contract]]
