Sync Speedrun with last version Scaffold Stark in PR-355

--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -12,7 +12,8 @@
     "vercel:yolo": "vercel --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "test": "vitest"
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
