--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -12,8 +12,7 @@
     "vercel:yolo": "vercel --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "test": "vitest"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
@@ -29,6 +28,8 @@
     "daisyui": "^4.7.3",
     "ethers": "^6.12.0",
     "get-starknet-core": "^4.0.0",
+    "ipfs-utils": "^9.0.14",
+    "kubo-rpc-client": "^4.0.1",
     "next": "14.1.3",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
@@ -37,6 +38,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-json-view": "^1.21.3",
     "starknet": "6.12.1",
     "type-fest": "^4.6.0",
     "usehooks-ts": "^2.13.0",
