--- a/packages/snfoundry/contracts/Scarb.toml
+++ b/packages/snfoundry/contracts/Scarb.toml
@@ -7,18 +7,21 @@ edition = "2023_11"
 
 [dependencies]
 starknet = "2.8.2"
+# Change to just "openzeppelin" to use full features
 openzeppelin_access = "0.17.0"
 openzeppelin_token = "0.17.0"
-openzeppelin_introspection = "0.17.0"
 
 [dev-dependencies]
 openzeppelin_utils = "0.17.0"
 snforge_std = "0.31.0"
-assert_macros = "2.8.2"
-
 
 [[target.starknet-contract]]
 casm = true
 
 [tool.fmt]
 sort-module-level-items = true
+
+[[tool.snforge.fork]]
+name = "SEPOLIA_LATEST"
+url = "https://starknet-sepolia.public.blastapi.io/rpc/v0_7"
+block_id.tag = "latest"
