--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -20,6 +20,7 @@
     "@next/font": "^14.2.1",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/themes": "2.0.3",
+    "@scaffold-stark/stark-burner": "0.1.8",
     "@starknet-io/types-js": "^0.7.7",
     "@starknet-react/chains": "^3.1.0",
     "@starknet-react/core": "^3.6.0",
@@ -32,6 +33,7 @@
     "next": "14.1.3",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
+    "prettier": "^3.4.2",
     "prettier-standalone": "^1.3.1-0",
     "qrcode.react": "^3.1.0",
     "react": "^18",
@@ -48,9 +50,9 @@
     "@testing-library/react": "^16.0.1",
     "@types/node": "^20",
     "@types/nprogress": "^0",
-    "@types/react": "^18",
+    "@types/react": "latest",
     "@types/react-copy-to-clipboard": "^5.0.4",
-    "@types/react-dom": "^18",
+    "@types/react-dom": "latest",
     "@vitejs/plugin-react": "^4.3.1",
     "@vitest/coverage-istanbul": "^2.1.1",
     "@vitest/coverage-v8": "^2.1.1",
@@ -62,6 +64,8 @@
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
     "vercel": "^33.7.1",
-    "vitest": "^2.1.1"
+    "vitest": "^2.1.1",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1"
   }
 }
