--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -51,7 +51,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "latest",
     "typescript": "^5",
     "vercel": "^33.6.2"
   }
