--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -18,6 +18,8 @@
     "@next/font": "^14.2.4",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/themes": "2.0.3",
+    "@scaffold-stark/stark-burner": "^0.1.8",
+    "@starknet-io/types-js": "^0.7.10",
     "@starknet-react/chains": "^0.1.7",
     "@starknet-react/core": "^2.3.0",
     "abi-wan-kanabi": "^2.2.2",
