--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -36,6 +36,7 @@
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
     "react-player": "^2.16.0",
+    "rehype-raw": "^7.0.0",
     "sharp": "^0.29.0",
     "starknet": "5.25.0",
     "starknet-dev": "npm:starknet@6.7.0",
