--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -23,6 +23,7 @@
     "@starknet-react/chains": "^0.1.7",
     "@starknet-react/core": "^2.3.0",
     "abi-wan-kanabi": "^2.2.2",
+    "axios": "1.7.9",
     "blo": "^1.1.1",
     "daisyui": "^4.7.3",
     "get-starknet-core": "^3.2.0",
@@ -38,6 +39,7 @@
     "react-player": "^2.16.0",
     "rehype-raw": "^7.0.0",
     "sharp": "^0.29.0",
+    "socket.io-client": "^4.8.1",
     "starknet": "5.25.0",
     "starknet-dev": "npm:starknet@6.7.0",
     "type-fest": "^4.6.0",
